--- a/clojurebook/resources/public/home.html
+++ b/clojurebook/resources/public/home.html
@@ -16,32 +16,32 @@
 		</script>
 		
 		<script type="text/javascript">
-		function renderUsers(users) {
-			$('#user-list').empty();
-			for(user in users) 
-				$('#user-list').append($('<li/>', {html: users[user]}));				
+		function renderPrefixes(prefixes) {
+			$('#prefix-list').empty();
+			for(prefix in prefixes) 
+				$('#prefix-list').append($('<li/>', {html: prefixes[prefix]}));				
 		}
 		
-		function getUsers() {
-			$.get("/users", renderUsers);						
+		function getPrefixes() {
+			$.get("/prefixes", renderPrefixes);						
 		}
 		function handleError(xhr) { 
 			$('#error').text(xhr.statusText + ": " + xhr.responseText);
 		}
 		
-		function addUser() {			
-			var jqxhr = $.post("/add-user", {user: $('#name').val()}, renderUsers)
+		function addPrefix() {			
+			var jqxhr = $.post("/add-prefix", {prefix: $('#name').val()}, renderPrefixes)
 			             .fail(handleError);
 		}
 		
-		$(function() {getUsers();});
+		$(function() {getPrefixes();});
 		</script>
 	</head>
 	<body>
-		<h1>Current Users</h1>
+		<h1>Current Prefixes</h1>
 		<p id="error"></p>
-		<ul id="user-list"></ul>		
-		<input type="text" id="name" placeholder="user name"/>					
-		<button onclick="addUser()">Add User</button>
+		<ul id="prefix-list"></ul>		
+		<input type="text" id="name" placeholder="prefix name"/>					
+		<button onclick="addPrefix()">Add Prefix!</button>
 	</body>
 </html>
